Revision history for Perl module Galileo.

0.030  August 26, 2013
	- Removed Galileo::Plugin::FlexMemorize in favor of Mojolicious::Plugin::Memorize

0.029  June 29, 2013
	- Fixed page deletion bug introduced in 0.028 (chicoxyzzy++)
	- Fixed model click handler bugs

0.028  May 14, 2013
	- Fixed bugs in modals (Fatalnix++)
	- Moved modal template to a plugin
	- Moved memorization helpers to a plugin
	- Improved testing

0.027  April 3, 2013
	- Use RFC 6901 compliant JSON pointers in tests
		- Bump Mojolicious to 3.92 

0.026  March 15, 2013
	- Added File::Next to requires, was causing failing installation

0.025  March 12, 2013
	- Bug fixes (fix broken release 0.024 ooops)

0.024  March 12, 2013
	- Fix some setup bugs
	- Deprecated files config key (use extra_static_paths)
		- Deprecated functionality will be removed by 0.1 release
	- Added mostly hidden/useless 'upload_path' system

0.023  March 4, 2013
	- Removed CLI config/setup commands
	- Added web-based setup command
	- Page and Menu controllers are now properly distinct
	- Added expires helper (from being a controller method)
	- Deprecated db_connect config key
	- Added db_* keys (dsn, username, password, options)
	- Deprecated string use of files config key (use arrayref)
		- Deprecated functionality will be removed by 0.1 release

0.022  February 16, 2013
	- Bump ::Humane version to 0.04

0.021  February 16, 2013
	- Use Mojolicious::Plugin::Humane (version 0.03)
	- Fix deprecation warnings
		- Bump Mojolicious to 3.85

0.020  February 11, 2013
	- Improved styling
		- Show and Edit page styles are alike
		- Use a simple font stack

0.019  February 5, 2013
	- Improved documentation (should have been in previous release)

0.018  February 5, 2013
	- Added some "theme" css

0.017  February 4, 2013
	- Getopt::Long bugfix (requires Mojolicious 3.83, sri++)
	- Upgrade jQuery:
		- jQuery to 1.9.1
		- JQueryUI to 1.10.0

0.016  January 26, 2013
	- Added dump command (vervain)

0.015  January 18, 2013